Fri Feb 21 10:09:00 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_33_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          New compiler feature test to validate that a switch with char
          works as it should

Fri Feb 21 07:31:21 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/debian.changelog:
        * debian/debian.control:
        * debian/patches/series:
        * debian/patches/reduce-doxygen-doc.diff:
          Fixed debian packaging, thanks to Michael Dille
          <mdille3 at andrew dot cmu dot edu> for providing
          the patches

Wed Feb 19 20:25:34 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Compression/rle/RLECompressor.cpp:
        * ace/config-win32-borland.h:
        * ace/post.h:
        * ace/pre.h:
          Improved C++BuilderXE support

Wed Feb 19 12:23:19 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-icc-common.h:
          Intel C++ 2013 SP1 Update 2 has adequate C++11 support when
          it is used in GCC 4.7 or higher emulation mode

Tue Feb 18 21:39:29 UTC 2014  Steve Huston  <shuston@riverace.com>

        * rpmbuild/ace-tao.spec: Fixed --with tao, again. Some Linuxen's
          rpmbuild treats %define differently. When in doubt, use %global.

Mon Feb 17 12:10:59 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Process.cpp:
          Only use pragma GCC when using the gcc compiler

Mon Feb 17 11:23:13 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/auto_run_tests.pl:
          Added new commandline argument -x which enables Coverity
          Test Analyzer test separation. This is not enabled by
          default because enabling test separation increases the
          size of the Coverity intermediate directory significantly

Fri Feb 14 18:42:12 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Local_Name_Space_T.cpp: